# portfolio-repository-DjangoDeployProject

./: .env.template  Dockerfile  README.md  pyproject.toml  requirements.txt
mysite/mysite/: settings.py
