[tool.poetry]
name = "django-project"
version = "0.1.0"
description = ""
authors = ["dmitrii_korzhov <oberon@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2.0"
djangorestframework = "^3.15.2"
django-filter = "^24.3"
gunicorn = "^23.0.0"
pillow = "^11.0.0"
django-debug-toolbar = "4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
